# vision-similarity

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_tests.py
docs/: installation.md  quick_start.md  usage_examples.md
docs/flowcharts/: list_models_c4_flowchart.puml  plot_similarity_matrix_flow.puml  plot_similarity_matrix_with_c4.puml  vision_flowchart_with_c4.puml
src/vision_similarity/: __init__.py  list_models.py  plot_similarity_matrix.py  utils.py  vision_similarity.py
src/vision_similarity/configs/: models.yaml
tests/: test_generate_feature_similarity_heatmaps.py  test_list_models.py  test_plot_matrix.py  test_similarity_workflows.py  test_vision_similarity.py
